crates/slate/tests/snapshots/memcpy.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn memcpy(_0: *mut core::ffi::c_void, _1: *const core::ffi::c_void, _2: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
}

fn get_count() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = 4;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut full_src: [u8; 8] = [0; 8];
    let mut full_dst: [u8; 8] = [0; 8];
    let mut partial_src: [u8; 8] = [0; 8];
    let mut partial_dst: [u8; 8] = [0; 8];
    let mut alias_buf: [u8; 8] = [0; 8];
    let mut dyn_src: [u8; 8] = [0; 8];
    let mut dyn_dst: [u8; 8] = [0; 8];
    let mut n: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    full_src = [1, 2, 3, 4, 5, 6, 7, 8];
    full_dst = [0, 0, 0, 0, 0, 0, 0, 0];
    let _v1: *mut u8 = full_dst.as_mut_ptr() as *mut u8;
    let _v2: *mut core::ffi::c_void = _v1 as *mut core::ffi::c_void;
    let _v3: *mut u8 = full_src.as_mut_ptr() as *mut u8;
    let _v4: *mut core::ffi::c_void = _v3 as *mut core::ffi::c_void;
    let _v5: u64 = 8;
    let _v6: *mut core::ffi::c_void = unsafe { memcpy(_v2 as *mut core::ffi::c_void, _v4 as *const core::ffi::c_void, _v5 as usize) };
    partial_src = [9, 8, 7, 6, 5, 4, 3, 2];
    partial_dst = [0, 0, 0, 0, 0, 0, 0, 0];
    let _v7: *mut u8 = partial_dst.as_mut_ptr() as *mut u8;
    let _v8: *mut core::ffi::c_void = _v7 as *mut core::ffi::c_void;
    let _v9: *mut u8 = partial_src.as_mut_ptr() as *mut u8;
    let _v10: *mut core::ffi::c_void = _v9 as *mut core::ffi::c_void;
    let _v11: u64 = 4;
    let _v12: *mut core::ffi::c_void = unsafe { memcpy(_v8 as *mut core::ffi::c_void, _v10 as *const core::ffi::c_void, _v11 as usize) };
    alias_buf = [1, 2, 3, 4, 5, 6, 7, 8];
    let _v13: *mut u8 = alias_buf.as_mut_ptr() as *mut u8;
    let _v14: *mut core::ffi::c_void = _v13 as *mut core::ffi::c_void;
    let _v15: *mut u8 = alias_buf.as_mut_ptr() as *mut u8;
    let _v16: i32 = 4;
    let _v17: *mut u8 = unsafe { _v15.add(4) };
    let _v18: *mut core::ffi::c_void = _v17 as *mut core::ffi::c_void;
    let _v19: u64 = 4;
    let _v20: *mut core::ffi::c_void = unsafe { memcpy(_v14 as *mut core::ffi::c_void, _v18 as *const core::ffi::c_void, _v19 as usize) };
    dyn_src = [1, 1, 1, 1, 1, 1, 1, 1];
    dyn_dst = [0, 0, 0, 0, 0, 0, 0, 0];
    let _v21: i32 = get_count();
    n = _v21;
    let _v22: *mut u8 = dyn_dst.as_mut_ptr() as *mut u8;
    let _v23: *mut core::ffi::c_void = _v22 as *mut core::ffi::c_void;
    let _v24: *mut u8 = dyn_src.as_mut_ptr() as *mut u8;
    let _v25: *mut core::ffi::c_void = _v24 as *mut core::ffi::c_void;
    let _v26: i32 = n;
    let _v27: u64 = _v26 as u64;
    let _v28: *mut core::ffi::c_void = unsafe { memcpy(_v23 as *mut core::ffi::c_void, _v25 as *const core::ffi::c_void, _v27 as usize) };
    {
        let mut i: i32 = 0;
        let _v29: i32 = 0;
        i = _v29;
        loop {
            let _v30: i32 = i;
            let _v31: i32 = 8;
            let _v32: bool = _v30 < _v31;
            if !_v32 {
                break;
            }
            let _v33: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v34: i32 = i;
            let _v35: i64 = _v34 as i64;
            let _v36: u8 = full_dst[(_v35 as usize)];
            let _v37: i32 = _v36 as i32;
            let _v38: i32 = unsafe { printf(_v33 as *const i8, _v37) };
            let _v39: i32 = i;
            let _v40: i32 = _v39 + 1;
            i = _v40;
        }
    }
    {
        let mut i2: i32 = 0;
        let _v41: i32 = 0;
        i2 = _v41;
        loop {
            let _v42: i32 = i2;
            let _v43: i32 = 8;
            let _v44: bool = _v42 < _v43;
            if !_v44 {
                break;
            }
            let _v45: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v46: i32 = i2;
            let _v47: i64 = _v46 as i64;
            let _v48: u8 = partial_dst[(_v47 as usize)];
            let _v49: i32 = _v48 as i32;
            let _v50: i32 = unsafe { printf(_v45 as *const i8, _v49) };
            let _v51: i32 = i2;
            let _v52: i32 = _v51 + 1;
            i2 = _v52;
        }
    }
    {
        let mut i3: i32 = 0;
        let _v53: i32 = 0;
        i3 = _v53;
        loop {
            let _v54: i32 = i3;
            let _v55: i32 = 8;
            let _v56: bool = _v54 < _v55;
            if !_v56 {
                break;
            }
            let _v57: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v58: i32 = i3;
            let _v59: i64 = _v58 as i64;
            let _v60: u8 = alias_buf[(_v59 as usize)];
            let _v61: i32 = _v60 as i32;
            let _v62: i32 = unsafe { printf(_v57 as *const i8, _v61) };
            let _v63: i32 = i3;
            let _v64: i32 = _v63 + 1;
            i3 = _v64;
        }
    }
    {
        let mut i4: i32 = 0;
        let _v65: i32 = 0;
        i4 = _v65;
        loop {
            let _v66: i32 = i4;
            let _v67: i32 = 8;
            let _v68: bool = _v66 < _v67;
            if !_v68 {
                break;
            }
            let _v69: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v70: i32 = i4;
            let _v71: i64 = _v70 as i64;
            let _v72: u8 = dyn_dst[(_v71 as usize)];
            let _v73: i32 = _v72 as i32;
            let _v74: i32 = unsafe { printf(_v69 as *const i8, _v73) };
            let _v75: i32 = i4;
            let _v76: i32 = _v75 + 1;
            i4 = _v76;
        }
    }
    let _v77: *mut i8 = b"\n\0".as_ptr() as *mut i8;
    let _v78: i32 = unsafe { printf(_v77 as *const i8) };
    let _v79: i32 = 0;
    __retval = _v79;
    let _v80: i32 = __retval;
    std::process::exit(_v80 as i32);
}
