crates/slate/tests/snapshots/memset.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn memset(_0: *mut core::ffi::c_void, _1: i32, _2: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
}

fn get_count() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = 4;
    __retval = _v0;
    let _v1: i32 = __retval;
    return _v1;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut zero_buf: [u8; 8] = [0; 8];
    let mut value_buf: [u8; 8] = [0; 8];
    let mut partial_buf: [u8; 8] = [0; 8];
    let mut dynamic_buf: [u8; 8] = [0; 8];
    let mut n: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    zero_buf = [1, 2, 3, 4, 5, 6, 7, 8];
    let _v1: *mut u8 = zero_buf.as_mut_ptr() as *mut u8;
    let _v2: *mut core::ffi::c_void = _v1 as *mut core::ffi::c_void;
    let _v3: i32 = 0;
    let _v4: u64 = 8;
    let _v5: *mut core::ffi::c_void = unsafe { memset(_v2 as *mut core::ffi::c_void, _v3 as i32, _v4 as usize) };
    value_buf = [1, 2, 3, 4, 5, 6, 7, 8];
    let _v6: *mut u8 = value_buf.as_mut_ptr() as *mut u8;
    let _v7: *mut core::ffi::c_void = _v6 as *mut core::ffi::c_void;
    let _v8: i32 = 65;
    let _v9: u64 = 8;
    let _v10: *mut core::ffi::c_void = unsafe { memset(_v7 as *mut core::ffi::c_void, _v8 as i32, _v9 as usize) };
    partial_buf = [1, 2, 3, 4, 5, 6, 7, 8];
    let _v11: *mut u8 = partial_buf.as_mut_ptr() as *mut u8;
    let _v12: *mut core::ffi::c_void = _v11 as *mut core::ffi::c_void;
    let _v13: i32 = 9;
    let _v14: u64 = 4;
    let _v15: *mut core::ffi::c_void = unsafe { memset(_v12 as *mut core::ffi::c_void, _v13 as i32, _v14 as usize) };
    dynamic_buf = [1, 2, 3, 4, 5, 6, 7, 8];
    let _v16: i32 = get_count();
    n = _v16;
    let _v17: *mut u8 = dynamic_buf.as_mut_ptr() as *mut u8;
    let _v18: *mut core::ffi::c_void = _v17 as *mut core::ffi::c_void;
    let _v19: i32 = 9;
    let _v20: i32 = n;
    let _v21: u64 = _v20 as u64;
    let _v22: *mut core::ffi::c_void = unsafe { memset(_v18 as *mut core::ffi::c_void, _v19 as i32, _v21 as usize) };
    {
        let mut i: i32 = 0;
        let _v23: i32 = 0;
        i = _v23;
        loop {
            let _v24: i32 = i;
            let _v25: i32 = 8;
            let _v26: bool = _v24 < _v25;
            if !_v26 {
                break;
            }
            let _v27: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v28: i32 = i;
            let _v29: i64 = _v28 as i64;
            let _v30: u8 = zero_buf[(_v29 as usize)];
            let _v31: i32 = _v30 as i32;
            let _v32: i32 = unsafe { printf(_v27 as *const i8, _v31) };
            let _v33: i32 = i;
            let _v34: i32 = _v33 + 1;
            i = _v34;
        }
    }
    {
        let mut i2: i32 = 0;
        let _v35: i32 = 0;
        i2 = _v35;
        loop {
            let _v36: i32 = i2;
            let _v37: i32 = 8;
            let _v38: bool = _v36 < _v37;
            if !_v38 {
                break;
            }
            let _v39: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v40: i32 = i2;
            let _v41: i64 = _v40 as i64;
            let _v42: u8 = value_buf[(_v41 as usize)];
            let _v43: i32 = _v42 as i32;
            let _v44: i32 = unsafe { printf(_v39 as *const i8, _v43) };
            let _v45: i32 = i2;
            let _v46: i32 = _v45 + 1;
            i2 = _v46;
        }
    }
    {
        let mut i3: i32 = 0;
        let _v47: i32 = 0;
        i3 = _v47;
        loop {
            let _v48: i32 = i3;
            let _v49: i32 = 8;
            let _v50: bool = _v48 < _v49;
            if !_v50 {
                break;
            }
            let _v51: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v52: i32 = i3;
            let _v53: i64 = _v52 as i64;
            let _v54: u8 = partial_buf[(_v53 as usize)];
            let _v55: i32 = _v54 as i32;
            let _v56: i32 = unsafe { printf(_v51 as *const i8, _v55) };
            let _v57: i32 = i3;
            let _v58: i32 = _v57 + 1;
            i3 = _v58;
        }
    }
    {
        let mut i4: i32 = 0;
        let _v59: i32 = 0;
        i4 = _v59;
        loop {
            let _v60: i32 = i4;
            let _v61: i32 = 8;
            let _v62: bool = _v60 < _v61;
            if !_v62 {
                break;
            }
            let _v63: *mut i8 = b"%d \0".as_ptr() as *mut i8;
            let _v64: i32 = i4;
            let _v65: i64 = _v64 as i64;
            let _v66: u8 = dynamic_buf[(_v65 as usize)];
            let _v67: i32 = _v66 as i32;
            let _v68: i32 = unsafe { printf(_v63 as *const i8, _v67) };
            let _v69: i32 = i4;
            let _v70: i32 = _v69 + 1;
            i4 = _v70;
        }
    }
    let _v71: *mut i8 = b"\n\0".as_ptr() as *mut i8;
    let _v72: i32 = unsafe { printf(_v71 as *const i8) };
    let _v73: i32 = 0;
    __retval = _v73;
    let _v74: i32 = __retval;
    std::process::exit(_v74 as i32);
}
