crates/slate/tests/snapshots/nested_aggregate_const_record_field_alignment.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Inner {
    scanners: [Option<unsafe extern "C" fn(i32) -> i32>; 3],
    tag: i32,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct Outer {
    inner: Inner,
    bytes: [u8; 8],
    trailing1: Option<unsafe extern "C" fn(i32) -> i32>,
    trailing2: Option<unsafe extern "C" fn(i32) -> i32>,
    trailing3: i32,
}


static mut g: Outer = Outer { inner: Inner { scanners: [unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> i32>>(add1 as *const ()) }, unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> i32>>(add2 as *const ()) }, unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> i32>>(add3 as *const ()) }], tag: 42 }, bytes: [1, 2, 3, 4, 5, 6, 7, 8], trailing1: unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> i32>>(mul5 as *const ()) }, trailing2: unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> i32>>(mul7 as *const ()) }, trailing3: 99 };

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn add1(arg4: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg4;
    let _v0: i32 = x;
    let _v1: i32 = 1;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

extern "C" fn add2(arg3: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg3;
    let _v0: i32 = x;
    let _v1: i32 = 2;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

extern "C" fn add3(arg2: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg2;
    let _v0: i32 = x;
    let _v1: i32 = 3;
    let _v2: i32 = _v0 + _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

extern "C" fn mul5(arg1: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg1;
    let _v0: i32 = x;
    let _v1: i32 = 5;
    let _v2: i32 = _v0 * _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

extern "C" fn mul7(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    x = arg0;
    let _v0: i32 = x;
    let _v1: i32 = 7;
    let _v2: i32 = _v0 * _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i64 = 0;
    let _v3: Option<unsafe extern "C" fn(i32) -> i32> = unsafe { g.inner.scanners[(_v2 as usize)] };
    let _v4: i32 = 10;
    let _v5: i32 = unsafe { _v3.unwrap()(_v4) };
    let _v6: i64 = 1;
    let _v7: Option<unsafe extern "C" fn(i32) -> i32> = unsafe { g.inner.scanners[(_v6 as usize)] };
    let _v8: i32 = 10;
    let _v9: i32 = unsafe { _v7.unwrap()(_v8) };
    let _v10: i64 = 2;
    let _v11: Option<unsafe extern "C" fn(i32) -> i32> = unsafe { g.inner.scanners[(_v10 as usize)] };
    let _v12: i32 = 10;
    let _v13: i32 = unsafe { _v11.unwrap()(_v12) };
    let _v14: i32 = unsafe { g.inner.tag };
    let _v15: i32 = unsafe { printf(_v1 as *const i8, _v5, _v9, _v13, _v14) };
    {
        let mut i: i32 = 0;
        let _v16: i32 = 0;
        i = _v16;
        loop {
            let _v17: i32 = i;
            let _v18: i32 = 8;
            let _v19: bool = _v17 < _v18;
            if !_v19 {
                break;
            }
            {
                let _v20: *mut i8 = b"%d \0".as_ptr() as *mut i8;
                let _v21: i32 = i;
                let _v22: i64 = _v21 as i64;
                let _v23: u8 = unsafe { g.bytes[(_v22 as usize)] };
                let _v24: i32 = _v23 as i32;
                let _v25: i32 = unsafe { printf(_v20 as *const i8, _v24) };
            }
            let _v26: i32 = i;
            let _v27: i32 = _v26 + 1;
            i = _v27;
        }
    }
    let _v28: *mut i8 = b"\n\0".as_ptr() as *mut i8;
    let _v29: i32 = unsafe { printf(_v28 as *const i8) };
    let _v30: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v31: Option<unsafe extern "C" fn(i32) -> i32> = unsafe { g.trailing1 };
    let _v32: i32 = 10;
    let _v33: i32 = unsafe { _v31.unwrap()(_v32) };
    let _v34: Option<unsafe extern "C" fn(i32) -> i32> = unsafe { g.trailing2 };
    let _v35: i32 = 10;
    let _v36: i32 = unsafe { _v34.unwrap()(_v35) };
    let _v37: i32 = unsafe { g.trailing3 };
    let _v38: i32 = unsafe { printf(_v30 as *const i8, _v33, _v36, _v37) };
    let _v39: i32 = 0;
    __retval = _v39;
    let _v40: i32 = __retval;
    std::process::exit(_v40 as i32);
}
