crates/slate/tests/snapshots/non_int_globals.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut byte: u8 = 200;

static mut ratio: f32 = 1.5;

static mut small: i8 = 12;

static mut total: f64 = 2.25;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn add_char(arg4: i8, arg5: i8) -> i8 {
    let mut a: i8 = 0;
    let mut b: i8 = 0;
    let mut __retval: i8 = 0;
    a = arg4;
    b = arg5;
    let _v0: i8 = a;
    let _v1: i32 = _v0 as i32;
    let _v2: i8 = b;
    let _v3: i32 = _v2 as i32;
    let _v4: i32 = _v1 + _v3;
    let _v5: i8 = _v4 as i8;
    __retval = _v5;
    let _v6: i8 = __retval;
    return _v6;
}

fn scale(arg2: f32, arg3: f32) -> f32 {
    let mut value: f32 = 0.0;
    let mut factor: f32 = 0.0;
    let mut __retval: f32 = 0.0;
    value = arg2;
    factor = arg3;
    let _v0: f32 = value;
    let _v1: f32 = factor;
    let _v2: f32 = _v0 * _v1;
    __retval = _v2;
    let _v3: f32 = __retval;
    return _v3;
}

fn add_double(arg0: f64, arg1: f64) -> f64 {
    let mut a: f64 = 0.0;
    let mut b: f64 = 0.0;
    let mut __retval: f64 = 0.0;
    a = arg0;
    b = arg1;
    let _v0: f64 = a;
    let _v1: f64 = b;
    let _v2: f64 = _v0 + _v1;
    __retval = _v2;
    let _v3: f64 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i8 = unsafe { small };
    let _v2: i8 = 3;
    let _v3: i8 = add_char(_v1, _v2);
    unsafe {
        small = _v3;
    }
    let _v4: u8 = unsafe { byte };
    let _v5: i32 = _v4 as i32;
    let _v6: i32 = 1;
    let _v7: i32 = _v5 + _v6;
    let _v8: u8 = _v7 as u8;
    unsafe {
        byte = _v8;
    }
    let _v9: f32 = unsafe { ratio };
    let _v10: f32 = 2.0;
    let _v11: f32 = scale(_v9, _v10);
    unsafe {
        ratio = _v11;
    }
    let _v12: f64 = unsafe { total };
    let _v13: f32 = unsafe { ratio };
    let _v14: f64 = _v13 as f64;
    let _v15: f64 = add_double(_v12, _v14);
    unsafe {
        total = _v15;
    }
    let _v16: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v17: i8 = unsafe { small };
    let _v18: i32 = _v17 as i32;
    let _v19: i32 = unsafe { printf(_v16 as *const i8, _v18) };
    let _v20: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v21: u8 = unsafe { byte };
    let _v22: i32 = _v21 as i32;
    let _v23: i32 = unsafe { printf(_v20 as *const i8, _v22) };
    let _v24: *mut i8 = b"%f\n\0".as_ptr() as *mut i8;
    let _v25: f32 = unsafe { ratio };
    let _v26: f64 = _v25 as f64;
    let _v27: i32 = unsafe { printf(_v24 as *const i8, _v26) };
    let _v28: *mut i8 = b"%f\n\0".as_ptr() as *mut i8;
    let _v29: f64 = unsafe { total };
    let _v30: i32 = unsafe { printf(_v28 as *const i8, _v29) };
    let _v31: i32 = 0;
    __retval = _v31;
    let _v32: i32 = __retval;
    std::process::exit(_v32 as i32);
}
