crates/slate/tests/snapshots/nonnull_all_params.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

unsafe fn use_all(arg0: *mut i32, arg1: *mut i32) -> i32 {
    let mut a: *mut i32 = std::ptr::null_mut();
    let mut b: *mut i32 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    a = arg0;
    b = arg1;
    let _v0: *mut i32 = a;
    let _v1: i32 = unsafe { *_v0 };
    let _v2: *mut i32 = b;
    let _v3: i32 = unsafe { *_v2 };
    let _v4: i32 = _v1 - _v3;
    __retval = _v4;
    let _v5: i32 = __retval;
    return _v5;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: i32 = 0;
    let mut y: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 10;
    x = _v1;
    let _v2: i32 = 4;
    y = _v2;
    let _v3: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v4: i32 = unsafe { use_all(std::ptr::addr_of_mut!(x), std::ptr::addr_of_mut!(y)) };
    let _v5: i32 = unsafe { printf(_v3 as *const i8, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
