crates/slate/tests/snapshots/noreturn_unproven_shape.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut unused_spin: Option<unsafe extern "C" fn()> = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn()>>(spin as *const ()) };

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

/// noreturn via an infinite loop: correct C, but Slate's lowering does not yet
/// prove this diverges (the generated Rust loop keeps a conditional break
/// guard), so it must fall back to a conservative, non-`!` return type
/// instead of emitting Rust that rustc would reject.
extern "C" fn spin() {
    {
        loop {
            let _v0: bool = true;
            if !_v0 {
                break;
            }
        }
    }
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"main\n\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { printf(_v1 as *const i8) };
    let _v3: i32 = 0;
    __retval = _v3;
    let _v4: i32 = __retval;
    std::process::exit(_v4 as i32);
}
