crates/slate/tests/snapshots/option_box_local_identity.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
    fn free(_0: *mut core::ffi::c_void);
}

fn compute(arg0: i32) -> i32 {
    let mut flag: i32 = 0;
    let mut __retval: i32 = 0;
    let mut p: *mut i32 = std::ptr::null_mut();
    let mut q: *mut i32 = std::ptr::null_mut();
    flag = arg0;
    let _v0: *mut i32 = std::ptr::null_mut();
    p = _v0;
    let _v1: *mut i32 = std::ptr::null_mut();
    q = _v1;
    {
        let _v2: i32 = flag;
        let _v3: bool = _v2 != 0;
        if _v3 {
            let _v4: u64 = 4;
            let _v5: *mut core::ffi::c_void = unsafe { malloc(_v4 as usize) };
            let _v6: *mut i32 = _v5 as *mut i32;
            p = _v6;
            let _v7: u64 = 4;
            let _v8: *mut core::ffi::c_void = unsafe { malloc(_v7 as usize) };
            let _v9: *mut i32 = _v8 as *mut i32;
            q = _v9;
        }
    }
    {
        let _v10: *mut i32 = p;
        let _v11: *mut i32 = q;
        let _v12: bool = _v10 == _v11;
        if _v12 {
            let _v13: *mut i8 = b"same\n\0".as_ptr() as *mut i8;
            let _v14: i32 = unsafe { printf(_v13 as *const i8) };
        } else {
            let _v15: *mut i8 = b"diff\n\0".as_ptr() as *mut i8;
            let _v16: i32 = unsafe { printf(_v15 as *const i8) };
        }
    }
    {
        let _v17: *mut i32 = p;
        let _v18: bool = _v17 != std::ptr::null_mut();
        if _v18 {
            let _v19: i32 = 1;
            let _v20: *mut i32 = p;
            unsafe {
                *_v20 = _v19;
            }
            let _v21: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
            let _v22: *mut i32 = p;
            let _v23: i32 = unsafe { *_v22 };
            let _v24: i32 = unsafe { printf(_v21 as *const i8, _v23) };
            let _v25: *mut i32 = p;
            let _v26: *mut core::ffi::c_void = _v25 as *mut core::ffi::c_void;
            unsafe { free(_v26 as *mut core::ffi::c_void) };
        }
    }
    {
        let _v27: *mut i32 = q;
        let _v28: bool = _v27 != std::ptr::null_mut();
        if _v28 {
            let _v29: i32 = 2;
            let _v30: *mut i32 = q;
            unsafe {
                *_v30 = _v29;
            }
            let _v31: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
            let _v32: *mut i32 = q;
            let _v33: i32 = unsafe { *_v32 };
            let _v34: i32 = unsafe { printf(_v31 as *const i8, _v33) };
            let _v35: *mut i32 = q;
            let _v36: *mut core::ffi::c_void = _v35 as *mut core::ffi::c_void;
            unsafe { free(_v36 as *mut core::ffi::c_void) };
        }
    }
    let _v37: i32 = 0;
    __retval = _v37;
    let _v38: i32 = __retval;
    return _v38;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 1;
    let _v2: i32 = compute(_v1);
    let _v3: i32 = 0;
    let _v4: i32 = compute(_v3);
    let _v5: i32 = 0;
    __retval = _v5;
    let _v6: i32 = __retval;
    std::process::exit(_v6 as i32);
}
