crates/slate/tests/snapshots/over_aligned_local.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C, align(32))]
#[derive(Clone, Copy)]
struct OverAligned {
    value: i32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut object: aligned::Aligned<aligned::A32, OverAligned> = aligned::Aligned(OverAligned { value: 0 });
    let mut local: aligned::Aligned<aligned::A64, i32> = aligned::Aligned(0);
    let _v0: i32 = 0;
    __retval = _v0;
    *object = OverAligned { value: 7 };
    let _v1: i32 = 11;
    *local = _v1;
    let _v2: *mut i8 = b"%zu %zu %zu %d %d\n\0".as_ptr() as *mut i8;
    let _v3: u64 = std::mem::align_of::<OverAligned>() as u64;
    let _v4: u64 = std::ptr::addr_of_mut!(*object) as u64;
    let _v5: u64 = 32;
    let _v6: u64 = _v4 % _v5;
    let _v7: u64 = std::ptr::addr_of_mut!(*local) as u64;
    let _v8: u64 = 64;
    let _v9: u64 = _v7 % _v8;
    let _v10: i32 = object.value;
    let _v11: i32 = *local;
    let _v12: i32 = unsafe { printf(_v2 as *const i8, _v3, _v6, _v9, _v10, _v11) };
    let _v13: i32 = 0;
    __retval = _v13;
    let _v14: i32 = __retval;
    std::process::exit(_v14 as i32);
}
