crates/slate/tests/snapshots/overflow_scalar_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut ri: i32 = 0;
    let mut ru: u32 = 0;
    let mut rll: i64 = 0;
    let mut add_i: i32 = 0;
    let mut sub_i: i32 = 0;
    let mut mul_i: i32 = 0;
    let mut add_u: i32 = 0;
    let mut mul_ll: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 0;
    ri = _v1;
    let _v2: u32 = 0;
    ru = _v2;
    let _v3: i64 = 0;
    rll = _v3;
    let _v4: i32 = 2147483647;
    let _v5: i32 = 1;
    let _v6 = _v4.overflowing_add(_v5);
    let _v7: i32 = _v6.0 as i32;
    let _v8: bool = _v6.1 || (_v6.0 < -2147483648 || _v6.0 > 2147483647);
    ri = _v7;
    let _v9: i32 = _v8 as i32;
    add_i = _v9;
    let _v10: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v11: i32 = add_i;
    let _v12: i32 = ri;
    let _v13: i32 = unsafe { printf(_v10 as *const i8, _v11, _v12) };
    let _v14: i32 = -2147483647;
    let _v15: i32 = 1;
    let _v16: i32 = _v14 - _v15;
    let _v17: i32 = 1;
    let _v18 = _v16.overflowing_sub(_v17);
    let _v19: i32 = _v18.0 as i32;
    let _v20: bool = _v18.1 || (_v18.0 < -2147483648 || _v18.0 > 2147483647);
    ri = _v19;
    let _v21: i32 = _v20 as i32;
    sub_i = _v21;
    let _v22: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v23: i32 = sub_i;
    let _v24: i32 = ri;
    let _v25: i32 = unsafe { printf(_v22 as *const i8, _v23, _v24) };
    let _v26: i32 = 1073741824;
    let _v27: i32 = 2;
    let _v28 = _v26.overflowing_mul(_v27);
    let _v29: i32 = _v28.0 as i32;
    let _v30: bool = _v28.1 || (_v28.0 < -2147483648 || _v28.0 > 2147483647);
    ri = _v29;
    let _v31: i32 = _v30 as i32;
    mul_i = _v31;
    let _v32: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v33: i32 = mul_i;
    let _v34: i32 = ri;
    let _v35: i32 = unsafe { printf(_v32 as *const i8, _v33, _v34) };
    let _v36: u32 = 4294967295u32;
    let _v37: u32 = 1;
    let _v38 = _v36.overflowing_add(_v37);
    let _v39: u32 = _v38.0 as u32;
    let _v40: bool = _v38.1 || _v38.0 > 4294967295;
    ru = _v39;
    let _v41: i32 = _v40 as i32;
    add_u = _v41;
    let _v42: *mut i8 = b"%d %u\n\0".as_ptr() as *mut i8;
    let _v43: i32 = add_u;
    let _v44: u32 = ru;
    let _v45: i32 = unsafe { printf(_v42 as *const i8, _v43, _v44) };
    let _v46: i64 = 3037000500i64;
    let _v47: i64 = 3037000500i64;
    let _v48 = _v46.overflowing_mul(_v47);
    let _v49: i64 = _v48.0 as i64;
    let _v50: bool = _v48.1 || (_v48.0 < -9223372036854775808 || _v48.0 > 9223372036854775807);
    rll = _v49;
    let _v51: i32 = _v50 as i32;
    mul_ll = _v51;
    let _v52: *mut i8 = b"%d %lld\n\0".as_ptr() as *mut i8;
    let _v53: i32 = mul_ll;
    let _v54: i64 = rll;
    let _v55: i32 = unsafe { printf(_v52 as *const i8, _v53, _v54) };
    let _v56: i32 = 0;
    __retval = _v56;
    let _v57: i32 = __retval;
    std::process::exit(_v57 as i32);
}
